@@ -1,5 +1,7 @@
 
 8.63  2020-10-11
+  - Improved Mojo::IOLoop::Subprocess to ensure a clean exit even if something unexpected happens in the forked
+    process.
 
 8.62  2020-10-10
   - Improved commands to exit with a usage message on unknown options.
